test: create song controller and song service test